--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Horloge</title>
+    <title>Horloge_project</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="app"></div>
