--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="clock">
+      <div class="huit">
+        <div class="tile top"></div>
+        <div class="tile top-left"></div>
+        <div class="tile top-right"></div>
+        <div class="tile middle"></div>
+        <div class="tile bottom-left"></div>
+        <div class="tile bottom-right"></div>
+        <div class="tile bottom"></div>
+      </div>
+      <div class="huit">
+        <div class="tile top"></div>
+        <div class="tile top-left"></div>
+        <div class="tile top-right"></div>
+        <div class="tile middle"></div>
+        <div class="tile bottom-left"></div>
+        <div class="tile bottom-right"></div>
+        <div class="tile bottom"></div>
+      </div>
+      <div id="points">
+        <div class="point"></div>
+        <div class="point"></div>
+      </div>
+      <div class="huit">
+        <div class="tile top"></div>
+        <div class="tile top-left"></div>
+        <div class="tile top-right"></div>
+        <div class="tile middle"></div>
+        <div class="tile bottom-left"></div>
+        <div class="tile bottom-right"></div>
+        <div class="tile bottom"></div>
+      </div>
+      <div class="huit">
+        <div class="tile top"></div>
+        <div class="tile top-left"></div>
+        <div class="tile top-right"></div>
+        <div class="tile middle"></div>
+        <div class="tile bottom-left"></div>
+        <div class="tile bottom-right"></div>
+        <div class="tile bottom"></div>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
