--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
   <body>
     <div id="clock">
       <div class="huit">
-        <div class="tile top"></div>
-        <div class="tile top-left"></div>
-        <div class="tile top-right"></div>
-        <div class="tile middle"></div>
-        <div class="tile bottom-left"></div>
-        <div class="tile bottom-right"></div>
-        <div class="tile bottom"></div>
+        <div class="tile top H02356789"></div>
+        <div class="tile top-left H045689"></div>
+        <div class="tile top-right H01234789"></div>
+        <div class="tile middle H2345689"></div>
+        <div class="tile bottom-left H0268"></div>
+        <div class="tile bottom-right H013456789"></div>
+        <div class="tile bottom H0235689"></div>
       </div>
       <div class="huit">
-        <div class="tile top"></div>
-        <div class="tile top-left"></div>
-        <div class="tile top-right"></div>
-        <div class="tile middle"></div>
-        <div class="tile bottom-left"></div>
-        <div class="tile bottom-right"></div>
-        <div class="tile bottom"></div>
+        <div class="tile top H02356789"></div>
+        <div class="tile top-left H045689"></div>
+        <div class="tile top-right H01234789"></div>
+        <div class="tile middle H2345689"></div>
+        <div class="tile bottom-left H0268"></div>
+        <div class="tile bottom-right H013456789"></div>
+        <div class="tile bottom H0235689"></div>
       </div>
       <div id="points">
         <div class="point"></div>
         <div class="point"></div>
       </div>
       <div class="huit">
-        <div class="tile top"></div>
-        <div class="tile top-left"></div>
-        <div class="tile top-right"></div>
-        <div class="tile middle"></div>
-        <div class="tile bottom-left"></div>
-        <div class="tile bottom-right"></div>
-        <div class="tile bottom"></div>
+        <div class="tile top H02356789"></div>
+        <div class="tile top-left H045689"></div>
+        <div class="tile top-right H01234789"></div>
+        <div class="tile middle H2345689"></div>
+        <div class="tile bottom-left H0268"></div>
+        <div class="tile bottom-right H013456789"></div>
+        <div class="tile bottom H0235689"></div>
       </div>
       <div class="huit">
-        <div class="tile top"></div>
-        <div class="tile top-left"></div>
-        <div class="tile top-right"></div>
-        <div class="tile middle"></div>
-        <div class="tile bottom-left"></div>
-        <div class="tile bottom-right"></div>
-        <div class="tile bottom"></div>
+        <div class="tile top H02356789"></div>
+        <div class="tile top-left H045689"></div>
+        <div class="tile top-right H01234789"></div>
+        <div class="tile middle H2345689"></div>
+        <div class="tile bottom-left H0268"></div>
+        <div class="tile bottom-right H013456789"></div>
+        <div class="tile bottom H0235689"></div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
